--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>Menú Principal - ZAPATA</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#00416A">
   <style>
     body {
       margin: 0;
@@ -19,13 +21,11 @@
       position: relative;
       overflow: hidden;
     }
-
     h1 {
       margin-bottom: 30px;
       font-size: 28px;
       z-index: 2;
     }
-
     .menu-container {
       display: flex;
       flex-wrap: wrap;
@@ -33,7 +33,6 @@
       gap: 20px;
       z-index: 2;
     }
-
     .menu-button {
       background-color: white;
       color: #00416A;
@@ -47,13 +46,11 @@
       min-width: 220px;
       text-align: center;
     }
-
     .menu-button:hover {
       background-color: #00416A;
       color: white;
       transform: scale(1.05);
     }
-
     .marca-agua {
       position: absolute;
       top: 50%;
@@ -68,18 +65,19 @@
   </style>
 </head>
 <body>
-
-  <!-- Marca de agua con el logo -->
   <img src="logo_proveedora.png" alt="Logo La Proveedora" class="marca-agua">
-
   <h1>Menú Principal - ZAPATA</h1>
-
   <div class="menu-container">
     <button class="menu-button" onclick="window.location.href='https://licaptio.github.io/MENUADMONPROTEC25/INV%20ZAPATA/SALIDA%20ZAPATA.html'">
       Salida Zapata
     </button>
-    <!-- Puedes agregar más botones aquí -->
   </div>
-
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('service-worker.js')
+        .then(() => console.log('Service Worker registrado'))
+        .catch(error => console.log('Error al registrar el Service Worker:', error));
+    }
+  </script>
 </body>
 </html>
